# kattis-template

./: Cargo.toml
src/: main.rs
src/lib/: cli.rs  lib.rs  mapper.rs  scaffold.rs  scraper.rs  scraper_util.rs  types.rs  util.rs
src/lib/backends/: c.rs  csharp_dotnet.rs  java_intellij.rs  python_uv.rs  rust.rs
src/lib/scaffold/: backends.rs
src/lib/scaffold/backends/: c.rs  csharp_dotnet.rs  java_intellij.rs  python_uv.rs  rust.rs
src/lib/scraping/: scraper.rs  scraper_util.rs
