[package]
name = "kattis_template_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.25.0"
thiserror = "2.0.18"

[lib]
name = "kattis_template"
path = "src/lib/lib.rs"

[[bin]]
name = "kattis-template"
path = "src/main.rs"
